Ajax loading & child doc alignment issue resolved
- Ajax loading issue resolved
- Child doc title alignment issue fixed in content area
-

--- a/assets/css/ezd-docs-widgets.css
+++ b/assets/css/ezd-docs-widgets.css
@@ -1716,6 +1716,8 @@ pre {
 }
 .d-items .documentation_item .media-body {
   flex: 1;
+  display: flex;
+  align-items: center;
 }
 .d-items .documentation_item .media-body .title {
   font-weight: 500;
