--- a/assets/scss/frontend/_single_and_docs_widget.scss
+++ b/assets/scss/frontend/_single_and_docs_widget.scss
@@ -93,7 +93,8 @@
 
     .media-body {
       flex: 1;
-
+      display: flex;
+      align-items: center; 
       .title {
         font-weight: 500;
         margin: 0 0 8px;
